server/.happypack/s-1975001057
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token (95:4)

[0m [90m 93 | [39m    componentDidMount(){
 [90m 94 | [39m        [36mthis[39m[33m.[39m
[31m[1m>[22m[39m[90m 95 | [39m    }
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 96 | [39m
 [90m 97 | [39m    onChangeInput(e){
 [90m 98 | [39m        [36mthis[39m[33m.[39msetState({[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token (95:4)

[0m [90m 93 | [39m    componentDidMount(){
 [90m 94 | [39m        [36mthis[39m[33m.[39m
[31m[1m>[22m[39m[90m 95 | [39m    }
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 96 | [39m
 [90m 97 | [39m    onChangeInput(e){
 [90m 98 | [39m        [36mthis[39m[33m.[39msetState({[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)